Fix dropdown nav menu corruption, fixed paned visibility logic

--- a/source-files/web-components/nav-menu.css
+++ b/source-files/web-components/nav-menu.css
@@ -34,7 +34,7 @@
   text-align: left;
 }      
 .nav-group:hover {
-  color: #808080;
+  color: #dd00dd;
 }
 .nav-group[unavailable] {
   display: none;
@@ -50,7 +50,7 @@
   text-align: left;
 }
 .nav-level0:hover {
-  color: #808080;
+  color: #dd00dd;
 }
  .nav-level0[collapsed] {
   display: none;
@@ -66,7 +66,7 @@
   text-align: left;
 }
 .nav-level1:hover {
-  color: #808080;
+  color: #dd00dd;
 }
 .nav-level1[collapsed] {
   display: none;
